style.css
body{
    font-family: Arial, Helvetica, sans-serif;
    color: #777;
    background: #777;
    width: 960px;
    font-size: 18px
}

header{
    height: 20%;
    Background-color: #ebebeb; 
    width: 100%;
    color: #777;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;
    padding: 1%;
    margin-left: 15%;
    margin-bottom:10px;
    }

    #nav
    {
        height: 20%;
        Background-color: #ebebeb; 
        color: #777; 
        text-align: center;
        font-family: Arial, Helvetica, sans-serif;
        padding: 1%;
        width: 100%;
        margin-left: 15%;
        margin-bottom:10px;
            }

        
    #section
    {
    Background-color: #ebebeb; 
    columns: #777; 
    text-align: center;
    width: 450px;
    font-family: Arial, Helvetica, sans-serif;
    float: left;
    text-align: center;
    margin-left: 15%;
        }

    #aside{
    height: 25%;
    Background-color: #ebebeb; 
    color: #777;
    text-align: center;
    width: 450px;
    font-family: Arial, Helvetica, sans-serif;
    float: left;
    margin-left: -150px;
    position: relative; left: 230px
            }
    
    footer {
        height: 15%;
        Background-color: #ebebeb; 
        color: #777;
        text-align: center;
        font-family: Arial, Helvetica, sans-serif;
        width: 960px;
        margin-left: 15%;
        margin-top:240px;
        padding: 1%;
        clear: both;
        overflow: auto
    }

